# neurometa

./: .gitignore  Justfile  README.md  brain_structure_hierarchy_2022-01-06.json  human_brain_tree_2022-01-10.json  pyproject.toml  save_all_to_repo.py
backups/human_brain_tree/: human_brain_tree_2023-05-19.json
backups/model_organism/: model_organism_2022-05-01.json  model_organism_2022-05-02.json  model_organism_2022-05-03.json  model_organism_2023-05-19.json
backups/neurotransmitter/: neurotransmitter_2022-05-02.json
human_brain_tree/: human_brain_tree.json  recent_human_brain_tree.json
human_brain_tree/previous_trees/: human_brain_tree_2022-02-09.json
human_brain_tree/source/: main.py  save.py
human_brain_tree/source/backups/: wiki_page_bak_2022-01-28.pickle  wiki_page_bak_2022-02-09.pickle
human_brain_trees/: human_brain_tree_2022-01-17.json
model_organisms/source/: main.py
model_organisms/source/backups/: wiki_page_bak_2022-01-28.pickle
neurometa/: constant.py  model_organism.py  save.py  scrape.py
neurometa/human_brain_tree/: main.py  utils.py
neurometa/neurotransmitter/: main.py  wikipedia_table.ods
neurotransmitter/: main.py  neurotransmitters.json
source/: main.py  utils.py
source/backups/: wiki_page_bak_2022-01-06.pickle  wiki_page_bak_2022-01-07.pickle  wiki_page_bak_2022-01-10.pickle  wiki_page_bak_2022-01-18.pickle
