[tool.poetry]
name = "neurometa"
version = "0.1.0"
description = "Package for generating metadata related to neuroscience"
authors = ["Can H. Tartanoglu <canhtart@gmail.com>"]
maintainers = ["Can H. Tartanoglu <canhtart@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/memorycircuits/neurometa"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]

packages = [{include = "neurometa"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
click = "^8.1.3"

Wikipedia-API = "^0.5.4"

pandas = "^1.4.0"
odfpy = "^1.4.1"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

