[tool.poetry]
name = "neurometa"
version = "1.3.3"
description = "Package for generating metadata related to neuroscience"
authors = ["Can H. Tartanoglu <canhtart@gmail.com>"]
maintainers = ["Can H. Tartanoglu <canhtart@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/memorycircuits/neurometa"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]

packages = [{include = "neurometa"}]

[tool.poetry.dependencies]
python = "^3.9"

pandas = { version = "*", extras = [ "compression", "parquet", "excel" ] }
deepdiff = { version = "^7.0.1", optional = false }
Wikipedia-API = { version = "^0.5.4", optional = false }

[tool.poetry.extras]
gen = ["Wikipedia-API", "deepdiff", "pandas"]

[tool.poetry.group.format.dependencies]
ruff = "*"
black = "*"
isort = "*"

[tool.isort]
line_length = 120
profile = "black"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
